--- a/Ui/curvesmanager.ui
+++ b/Ui/curvesmanager.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>168</width>
+    <width>249</width>
     <height>300</height>
    </rect>
   </property>
@@ -17,8 +17,8 @@
    <string>Curves list</string>
   </property>
   <widget class="QWidget" name="dockWidgetContents">
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
      <widget class="QFrame" name="frame">
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
@@ -33,7 +33,14 @@
        <item>
         <widget class="QPushButton" name="addCurve">
          <property name="text">
-          <string>Add</string>
+          <string>+</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="removeCurve">
+         <property name="text">
+          <string>-</string>
          </property>
         </widget>
        </item>
@@ -51,16 +58,30 @@
         </spacer>
        </item>
        <item>
-        <widget class="QPushButton" name="removeCurve">
+        <widget class="QPushButton" name="moveUp">
          <property name="text">
-          <string>Remove</string>
+          <string>^</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="moveTop">
+         <property name="text">
+          <string>^^</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="moveDown">
+         <property name="text">
+          <string>\/</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
-    <item>
+    <item row="1" column="0">
      <widget class="QListWidget" name="curvesList"/>
     </item>
    </layout>
