--- a/Ui/axesoptions.ui
+++ b/Ui/axesoptions.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>230</width>
+    <width>244</width>
     <height>427</height>
    </rect>
   </property>
@@ -26,14 +26,22 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>+</string>
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="../resources.qrc">
+          <normaloff>:/Resources/list-add.png</normaloff>:/Resources/list-add.png</iconset>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="delAxis">
         <property name="text">
-         <string>-</string>
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="../resources.qrc">
+          <normaloff>:/Resources/list-remove.png</normaloff>:/Resources/list-remove.png</iconset>
         </property>
        </widget>
       </item>
@@ -131,6 +139,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
