--- a/Ui/mainwindow.ui
+++ b/Ui/mainwindow.ui
@@ -25,6 +25,12 @@
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
+     <widget class="QStackedWidget" name="stackedWidget">
+      <widget class="QWidget" name="page"/>
+      <widget class="QWidget" name="page_2"/>
+     </widget>
+    </item>
+    <item row="1" column="0">
      <widget class="QLabel" name="label">
       <property name="text">
        <string/>
@@ -47,16 +53,6 @@
      <string>&amp;File</string>
     </property>
    </widget>
-   <widget class="QMenu" name="menu_Edit">
-    <property name="title">
-     <string>&amp;Edit</string>
-    </property>
-   </widget>
-   <widget class="QMenu" name="menuTools">
-    <property name="title">
-     <string>&amp;Tools</string>
-    </property>
-   </widget>
    <widget class="QMenu" name="menu_Window">
     <property name="title">
      <string>&amp;Window</string>
@@ -68,18 +64,8 @@
     </property>
    </widget>
    <addaction name="menu_File"/>
-   <addaction name="menu_Edit"/>
-   <addaction name="menuTools"/>
    <addaction name="menu_Window"/>
    <addaction name="menu_Help"/>
-  </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
