--- a/Ui/axesoptions.ui
+++ b/Ui/axesoptions.ui
@@ -71,10 +71,24 @@
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="1">
-       <widget class="QDoubleSpinBox" name="min"/>
+       <widget class="QDoubleSpinBox" name="min">
+        <property name="decimals">
+         <number>5</number>
+        </property>
+        <property name="minimum">
+         <double>-999999999.000000000000000</double>
+        </property>
+       </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QDoubleSpinBox" name="max"/>
+       <widget class="QDoubleSpinBox" name="max">
+        <property name="decimals">
+         <number>5</number>
+        </property>
+        <property name="maximum">
+         <double>999999999.000000000000000</double>
+        </property>
+       </widget>
       </item>
       <item row="2" column="1">
        <widget class="QLineEdit" name="label"/>
